# Overmind

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat
Libraries/: README.md
include/: Activation.hpp  App.hpp  Dataset.hpp  Layer.hpp  Loss.hpp  Network.hpp  Neuron.hpp  README.md
models/: test_model_001.csv  updated_model_001.csv
src/: Activation.cpp  App.cpp  Dataset.cpp  Layer.cpp  Loss.cpp  Network.cpp  Neuron.cpp  README.md  main.cpp
